@@ -30,17 +30,16 @@ import org.elasticsearch.cluster.routing.allocation.decider.FilterAllocationDeci
 import org.elasticsearch.cluster.routing.allocation.decider.SameShardAllocationDecider;
 import org.elasticsearch.cluster.routing.allocation.decider.ShardsLimitAllocationDecider;
 import org.elasticsearch.cluster.service.ClusterService;
-import org.elasticsearch.common.collect.ImmutableOpenMap;
 import org.elasticsearch.common.settings.ClusterSettings;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.core.Nullable;
+import org.elasticsearch.health.Diagnosis;
 import org.elasticsearch.health.HealthIndicatorDetails;
 import org.elasticsearch.health.HealthIndicatorImpact;
 import org.elasticsearch.health.HealthIndicatorResult;
 import org.elasticsearch.health.HealthStatus;
 import org.elasticsearch.health.ImpactArea;
 import org.elasticsearch.health.SimpleHealthIndicatorDetails;
-import org.elasticsearch.health.UserAction;
 import org.elasticsearch.index.Index;
 import org.elasticsearch.index.shard.ShardId;
 import org.elasticsearch.test.ESTestCase;
@@ -48,8 +47,10 @@ import org.mockito.stubbing.Answer;
 
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.Set;
 import java.util.UUID;
 import java.util.stream.Collectors;
@@ -69,8 +70,8 @@ import static org.elasticsearch.cluster.routing.allocation.ShardsAvailabilityHea
 import static org.elasticsearch.cluster.routing.allocation.ShardsAvailabilityHealthIndicatorService.ACTION_INCREASE_SHARD_LIMIT_INDEX_SETTING;
 import static org.elasticsearch.cluster.routing.allocation.ShardsAvailabilityHealthIndicatorService.ACTION_INCREASE_SHARD_LIMIT_INDEX_SETTING_LOOKUP;
 import static org.elasticsearch.cluster.routing.allocation.ShardsAvailabilityHealthIndicatorService.ACTION_INCREASE_TIER_CAPACITY_LOOKUP;
-import static org.elasticsearch.cluster.routing.allocation.ShardsAvailabilityHealthIndicatorService.ACTION_MIGRATE_TIERS_AWAY_FROM_INCLUDE_DATA;
-import static org.elasticsearch.cluster.routing.allocation.ShardsAvailabilityHealthIndicatorService.ACTION_MIGRATE_TIERS_AWAY_FROM_REQUIRE_DATA;
+import static org.elasticsearch.cluster.routing.allocation.ShardsAvailabilityHealthIndicatorService.ACTION_MIGRATE_TIERS_AWAY_FROM_INCLUDE_DATA_LOOKUP;
+import static org.elasticsearch.cluster.routing.allocation.ShardsAvailabilityHealthIndicatorService.ACTION_MIGRATE_TIERS_AWAY_FROM_REQUIRE_DATA_LOOKUP;
 import static org.elasticsearch.cluster.routing.allocation.ShardsAvailabilityHealthIndicatorService.ACTION_RESTORE_FROM_SNAPSHOT;
 import static org.elasticsearch.cluster.routing.allocation.ShardsAvailabilityHealthIndicatorService.NAME;
 import static org.elasticsearch.cluster.routing.allocation.ShardsAvailabilityHealthIndicatorServiceTests.ShardState.AVAILABLE;
@@ -83,7 +84,6 @@ import static org.elasticsearch.core.TimeValue.timeValueSeconds;
 import static org.elasticsearch.health.HealthStatus.GREEN;
 import static org.elasticsearch.health.HealthStatus.RED;
 import static org.elasticsearch.health.HealthStatus.YELLOW;
-import static org.elasticsearch.health.ServerHealthComponents.DATA;
 import static org.hamcrest.Matchers.contains;
 import static org.hamcrest.Matchers.containsInAnyOrder;
 import static org.hamcrest.Matchers.equalTo;
@@ -110,7 +110,6 @@ public class ShardsAvailabilityHealthIndicatorServiceTests extends ESTestCase {
                 createExpectedResult(
                     GREEN,
                     "This cluster has all shards available.",
-                    null,
                     Map.of("started_primaries", 2, "started_replicas", 1),
                     Collections.emptyList(),
                     Collections.emptyList()
@@ -143,7 +142,6 @@ public class ShardsAvailabilityHealthIndicatorServiceTests extends ESTestCase {
                     unavailableReplicas.size() > 1
                         ? "This cluster has " + unavailableReplicas.size() + " unavailable replicas."
                         : "This cluster has 1 unavailable replica.",
-                    ShardsAvailabilityHealthIndicatorService.HELP_URL,
                     Map.of(
                         "started_primaries",
                         1,
@@ -155,11 +153,11 @@ public class ShardsAvailabilityHealthIndicatorServiceTests extends ESTestCase {
                     List.of(
                         new HealthIndicatorImpact(
                             2,
-                            "Searches might return slower than usual. Fewer redundant copies of the data exist on 1 index [yellow-index].",
+                            "Searches might be slower than usual. Fewer redundant copies of the data exist on 1 index [yellow-index].",
                             List.of(ImpactArea.SEARCH)
                         )
                     ),
-                    Collections.emptyList()
+                    List.of(new Diagnosis(ACTION_CHECK_ALLOCATION_EXPLAIN_API, List.of("yellow-index")))
                 )
             )
         );
@@ -178,7 +176,6 @@ public class ShardsAvailabilityHealthIndicatorServiceTests extends ESTestCase {
                 createExpectedResult(
                     RED,
                     "This cluster has 1 unavailable primary.",
-                    ShardsAvailabilityHealthIndicatorService.HELP_URL,
                     Map.of("unassigned_primaries", 1, "started_replicas", 1),
                     List.of(
                         new HealthIndicatorImpact(
@@ -187,7 +184,7 @@ public class ShardsAvailabilityHealthIndicatorServiceTests extends ESTestCase {
                             List.of(ImpactArea.INGEST, ImpactArea.SEARCH)
                         )
                     ),
-                    Collections.emptyList()
+                    List.of(new Diagnosis(ACTION_CHECK_ALLOCATION_EXPLAIN_API, List.of("red-index")))
                 )
             )
         );
@@ -203,7 +200,6 @@ public class ShardsAvailabilityHealthIndicatorServiceTests extends ESTestCase {
                 createExpectedResult(
                     RED,
                     "This cluster has 1 unavailable primary.",
-                    ShardsAvailabilityHealthIndicatorService.HELP_URL,
                     Map.of("unassigned_primaries", 1),
                     List.of(
                         new HealthIndicatorImpact(
@@ -212,7 +208,7 @@ public class ShardsAvailabilityHealthIndicatorServiceTests extends ESTestCase {
                             List.of(ImpactArea.INGEST, ImpactArea.SEARCH)
                         )
                     ),
-                    Collections.emptyList()
+                    List.of(new Diagnosis(ACTION_CHECK_ALLOCATION_EXPLAIN_API, List.of("red-index")))
                 )
             )
         );
@@ -227,7 +223,7 @@ public class ShardsAvailabilityHealthIndicatorServiceTests extends ESTestCase {
 
         HealthIndicatorResult result = service.calculate(true);
         assertEquals(RED, result.status());
-        assertEquals("This cluster has 1 unavailable primary, 1 unavailable replica.", result.summary());
+        assertEquals("This cluster has 1 unavailable primary, 1 unavailable replica.", result.symptom());
         assertEquals(1, result.impacts().size());
         assertEquals(
             result.impacts().get(0),
@@ -257,7 +253,7 @@ public class ShardsAvailabilityHealthIndicatorServiceTests extends ESTestCase {
 
         HealthIndicatorResult result = service.calculate(true);
         assertEquals(RED, result.status());
-        assertEquals("This cluster has 1 unavailable primary, 2 unavailable replicas.", result.summary());
+        assertEquals("This cluster has 1 unavailable primary, 2 unavailable replicas.", result.symptom());
         assertEquals(2, result.impacts().size());
         assertEquals(
             result.impacts().get(0),
@@ -273,7 +269,7 @@ public class ShardsAvailabilityHealthIndicatorServiceTests extends ESTestCase {
             equalTo(
                 new HealthIndicatorImpact(
                     2,
-                    "Searches might return slower than usual. Fewer redundant copies of the data exist on 2 indices [yellow-index-2, "
+                    "Searches might be slower than usual. Fewer redundant copies of the data exist on 2 indices [yellow-index-2, "
                         + "yellow-index-1].",
                     List.of(ImpactArea.SEARCH)
                 )
@@ -306,7 +302,7 @@ public class ShardsAvailabilityHealthIndicatorServiceTests extends ESTestCase {
             equalTo(
                 new HealthIndicatorImpact(
                     2,
-                    "Searches might return slower than usual. Fewer redundant copies of the data exist on 3 indices [index-2, "
+                    "Searches might be slower than usual. Fewer redundant copies of the data exist on 3 indices [index-2, "
                         + "index-1, index-3].",
                     List.of(ImpactArea.SEARCH)
                 )
@@ -333,7 +329,6 @@ public class ShardsAvailabilityHealthIndicatorServiceTests extends ESTestCase {
                 createExpectedResult(
                     GREEN,
                     "This cluster has 1 restarting replica.",
-                    null,
                     Map.of("started_primaries", 1, "restarting_replicas", 1),
                     Collections.emptyList(),
                     Collections.emptyList()
@@ -355,7 +350,6 @@ public class ShardsAvailabilityHealthIndicatorServiceTests extends ESTestCase {
                 createExpectedResult(
                     GREEN,
                     "This cluster has all shards available.",
-                    null,
                     Map.of("started_primaries", 1),
                     Collections.emptyList(),
                     Collections.emptyList()
@@ -383,17 +377,16 @@ public class ShardsAvailabilityHealthIndicatorServiceTests extends ESTestCase {
                 createExpectedResult(
                     YELLOW,
                     "This cluster has 1 unavailable replica.",
-                    ShardsAvailabilityHealthIndicatorService.HELP_URL,
                     Map.of("started_primaries", 1, "unassigned_replicas", 1),
                     List.of(
                         new HealthIndicatorImpact(
                             2,
-                            "Searches might return slower than usual. Fewer redundant copies of the data exist on 1 index "
+                            "Searches might be slower than usual. Fewer redundant copies of the data exist on 1 index "
                                 + "[restarting-index].",
                             List.of(ImpactArea.SEARCH)
                         )
                     ),
-                    Collections.emptyList()
+                    List.of(new Diagnosis(ACTION_CHECK_ALLOCATION_EXPLAIN_API, List.of("restarting-index")))
                 )
             )
         );
@@ -412,7 +405,6 @@ public class ShardsAvailabilityHealthIndicatorServiceTests extends ESTestCase {
                 createExpectedResult(
                     GREEN,
                     "This cluster has 1 creating primary.",
-                    null,
                     Map.of("creating_primaries", 1),
                     Collections.emptyList(),
                     Collections.emptyList()
@@ -434,7 +426,6 @@ public class ShardsAvailabilityHealthIndicatorServiceTests extends ESTestCase {
                 createExpectedResult(
                     GREEN,
                     "This cluster has 1 restarting primary.",
-                    null,
                     Map.of("restarting_primaries", 1),
                     Collections.emptyList(),
                     Collections.emptyList()
@@ -461,7 +452,6 @@ public class ShardsAvailabilityHealthIndicatorServiceTests extends ESTestCase {
                 createExpectedResult(
                     RED,
                     "This cluster has 1 unavailable primary.",
-                    ShardsAvailabilityHealthIndicatorService.HELP_URL,
                     Map.of("unassigned_primaries", 1),
                     List.of(
                         new HealthIndicatorImpact(
@@ -470,7 +460,7 @@ public class ShardsAvailabilityHealthIndicatorServiceTests extends ESTestCase {
                             List.of(ImpactArea.INGEST, ImpactArea.SEARCH)
                         )
                     ),
-                    Collections.emptyList()
+                    List.of(new Diagnosis(ACTION_CHECK_ALLOCATION_EXPLAIN_API, List.of("restarting-index")))
                 )
             )
         );
@@ -500,7 +490,6 @@ public class ShardsAvailabilityHealthIndicatorServiceTests extends ESTestCase {
                 createExpectedTruncatedResult(
                     RED,
                     "This cluster has 1 unavailable primary.",
-                    ShardsAvailabilityHealthIndicatorService.HELP_URL,
                     List.of(
                         new HealthIndicatorImpact(
                             1,
@@ -528,7 +517,7 @@ public class ShardsAvailabilityHealthIndicatorServiceTests extends ESTestCase {
         );
 
         var service = createAllocationHealthIndicatorService();
-        List<UserAction.Definition> definitions = service.diagnoseUnassignedShardRouting(shardRouting, ClusterState.EMPTY_STATE);
+        List<Diagnosis.Definition> definitions = service.diagnoseUnassignedShardRouting(shardRouting, ClusterState.EMPTY_STATE);
 
         assertThat(definitions, hasSize(1));
         assertThat(definitions, contains(ACTION_RESTORE_FROM_SNAPSHOT));
@@ -542,10 +531,10 @@ public class ShardsAvailabilityHealthIndicatorServiceTests extends ESTestCase {
             .numberOfReplicas(0)
             .build();
 
-        // Cluster state with index, but its only shard is unassigned because the allocation deciders said none are allowed
+        // Cluster state with index, but its only shard is unassigned (Either deciders said no, or a node left)
         var clusterState = createClusterStateWith(
             List.of(indexMetadata),
-            List.of(index("red-index", new ShardAllocation(randomNodeId(), UNAVAILABLE, decidersNo()))),
+            List.of(index("red-index", new ShardAllocation(randomNodeId(), UNAVAILABLE, randomFrom(decidersNo(), nodeLeft())))),
             List.of(),
             List.of()
         );
@@ -577,22 +566,7 @@ public class ShardsAvailabilityHealthIndicatorServiceTests extends ESTestCase {
 
         // Get the list of user actions that are generated for this unassigned index shard
         ShardRouting shardRouting = clusterState.routingTable().index(indexMetadata.getIndex()).shard(0).primaryShard();
-        List<UserAction.Definition> actions = service.diagnoseAllocationResults(
-            shardRouting,
-            clusterState,
-            List.of(
-                new NodeAllocationResult(
-                    new DiscoveryNode(randomNodeId(), buildNewFakeTransportAddress(), Version.CURRENT),
-                    new Decision.Multi().add(Decision.single(Decision.Type.YES, EnableAllocationDecider.NAME, null))
-                        .add(Decision.single(Decision.Type.YES, "data_tier", null))
-                        .add(Decision.single(Decision.Type.YES, ShardsLimitAllocationDecider.NAME, null))
-                        .add(Decision.single(Decision.Type.YES, FilterAllocationDecider.NAME, null))
-                        .add(Decision.single(Decision.Type.YES, SameShardAllocationDecider.NAME, null))
-                        .add(Decision.single(Decision.Type.NO, AwarenessAllocationDecider.NAME, null)), // Unhandled in indicator
-                    1
-                )
-            )
-        );
+        List<Diagnosis.Definition> actions = service.diagnoseUnassignedShardRouting(shardRouting, clusterState);
 
         assertThat(actions, hasSize(1));
         assertThat(actions, contains(ACTION_CHECK_ALLOCATION_EXPLAIN_API));
@@ -614,7 +588,7 @@ public class ShardsAvailabilityHealthIndicatorServiceTests extends ESTestCase {
         var service = createAllocationHealthIndicatorService();
 
         // Get the list of user actions that are generated for this unassigned index shard
-        List<UserAction.Definition> actions = service.checkIsAllocationDisabled(
+        List<Diagnosis.Definition> actions = service.checkIsAllocationDisabled(
             indexMetadata,
             List.of(
                 new NodeAllocationResult(
@@ -646,7 +620,7 @@ public class ShardsAvailabilityHealthIndicatorServiceTests extends ESTestCase {
         );
 
         // Get the list of user actions that are generated for this unassigned index shard
-        List<UserAction.Definition> actions = service.checkIsAllocationDisabled(
+        List<Diagnosis.Definition> actions = service.checkIsAllocationDisabled(
             indexMetadata,
             List.of(
                 new NodeAllocationResult(
@@ -683,7 +657,7 @@ public class ShardsAvailabilityHealthIndicatorServiceTests extends ESTestCase {
         );
 
         // Get the list of user actions that are generated for this unassigned index shard
-        List<UserAction.Definition> actions = service.checkIsAllocationDisabled(
+        List<Diagnosis.Definition> actions = service.checkIsAllocationDisabled(
             indexMetadata,
             List.of(
                 new NodeAllocationResult(
@@ -716,7 +690,7 @@ public class ShardsAvailabilityHealthIndicatorServiceTests extends ESTestCase {
         var service = createAllocationHealthIndicatorService();
 
         // Get the list of user actions that are generated for this unassigned index shard
-        List<UserAction.Definition> actions = service.checkDataTierRelatedIssues(
+        List<Diagnosis.Definition> actions = service.checkDataTierRelatedIssues(
             indexMetadata,
             List.of(
                 // Shard is not allowed due to data tier filter
@@ -775,7 +749,7 @@ public class ShardsAvailabilityHealthIndicatorServiceTests extends ESTestCase {
         var service = createAllocationHealthIndicatorService();
 
         // Get the list of user actions that are generated for this unassigned index shard
-        List<UserAction.Definition> actions = service.checkDataTierRelatedIssues(
+        List<Diagnosis.Definition> actions = service.checkDataTierRelatedIssues(
             indexMetadata,
             List.of(
                 new NodeAllocationResult(
@@ -840,7 +814,7 @@ public class ShardsAvailabilityHealthIndicatorServiceTests extends ESTestCase {
         );
 
         // Get the list of user actions that are generated for this unassigned index shard
-        List<UserAction.Definition> actions = service.checkDataTierRelatedIssues(
+        List<Diagnosis.Definition> actions = service.checkDataTierRelatedIssues(
             indexMetadata,
             List.of(
                 new NodeAllocationResult(
@@ -900,7 +874,7 @@ public class ShardsAvailabilityHealthIndicatorServiceTests extends ESTestCase {
         var service = createAllocationHealthIndicatorService();
 
         // Get the list of user actions that are generated for this unassigned index shard
-        List<UserAction.Definition> actions = service.checkDataTierRelatedIssues(
+        List<Diagnosis.Definition> actions = service.checkDataTierRelatedIssues(
             indexMetadata,
             List.of(
                 new NodeAllocationResult(
@@ -965,7 +939,7 @@ public class ShardsAvailabilityHealthIndicatorServiceTests extends ESTestCase {
         );
 
         // Get the list of user actions that are generated for this unassigned index shard
-        List<UserAction.Definition> actions = service.checkDataTierRelatedIssues(
+        List<Diagnosis.Definition> actions = service.checkDataTierRelatedIssues(
             indexMetadata,
             List.of(
                 new NodeAllocationResult(
@@ -1000,7 +974,7 @@ public class ShardsAvailabilityHealthIndicatorServiceTests extends ESTestCase {
         var service = createAllocationHealthIndicatorService();
 
         // Get the list of user actions that are generated for this unassigned index shard
-        List<UserAction.Definition> actions = service.checkDataTierRelatedIssues(
+        List<Diagnosis.Definition> actions = service.checkDataTierRelatedIssues(
             indexMetadata,
             List.of(
                 // Shard is allowed on data tier, but disallowed because of allocation filters
@@ -1016,7 +990,7 @@ public class ShardsAvailabilityHealthIndicatorServiceTests extends ESTestCase {
         );
 
         assertThat(actions, hasSize(1));
-        assertThat(actions, contains(ACTION_MIGRATE_TIERS_AWAY_FROM_REQUIRE_DATA));
+        assertThat(actions, contains(ACTION_MIGRATE_TIERS_AWAY_FROM_REQUIRE_DATA_LOOKUP.get(DataTier.DATA_HOT)));
     }
 
     public void testDiagnoseMigrateDataIncludedToDataTiers() {
@@ -1036,7 +1010,7 @@ public class ShardsAvailabilityHealthIndicatorServiceTests extends ESTestCase {
         var service = createAllocationHealthIndicatorService();
 
         // Get the list of user actions that are generated for this unassigned index shard
-        List<UserAction.Definition> actions = service.checkDataTierRelatedIssues(
+        List<Diagnosis.Definition> actions = service.checkDataTierRelatedIssues(
             indexMetadata,
             List.of(
                 // Shard is allowed on data tier, but disallowed because of allocation filters
@@ -1052,7 +1026,7 @@ public class ShardsAvailabilityHealthIndicatorServiceTests extends ESTestCase {
         );
 
         assertThat(actions, hasSize(1));
-        assertThat(actions, contains(ACTION_MIGRATE_TIERS_AWAY_FROM_INCLUDE_DATA));
+        assertThat(actions, contains(ACTION_MIGRATE_TIERS_AWAY_FROM_INCLUDE_DATA_LOOKUP.get(DataTier.DATA_HOT)));
     }
 
     public void testDiagnoseOtherFilteringIssue() {
@@ -1071,7 +1045,7 @@ public class ShardsAvailabilityHealthIndicatorServiceTests extends ESTestCase {
         var service = createAllocationHealthIndicatorService();
 
         // Get the list of user actions that are generated for this unassigned index shard
-        List<UserAction.Definition> actions = service.checkDataTierRelatedIssues(
+        List<Diagnosis.Definition> actions = service.checkDataTierRelatedIssues(
             indexMetadata,
             List.of(
                 // Shard is allowed on data tier, but disallowed because of allocation filters
@@ -1106,7 +1080,7 @@ public class ShardsAvailabilityHealthIndicatorServiceTests extends ESTestCase {
         var service = createAllocationHealthIndicatorService();
 
         // Get the list of user actions that are generated for this unassigned index shard
-        List<UserAction.Definition> actions = service.checkDataTierRelatedIssues(
+        List<Diagnosis.Definition> actions = service.checkDataTierRelatedIssues(
             indexMetadata,
             List.of(
                 // Shard is allowed on data tier, but disallowed because node is already hosting a copy of it.
@@ -1146,7 +1120,7 @@ public class ShardsAvailabilityHealthIndicatorServiceTests extends ESTestCase {
         var service = createAllocationHealthIndicatorService();
 
         // Get the list of user actions that are generated for this unassigned index shard
-        List<UserAction.Definition> actions = service.checkDataTierRelatedIssues(
+        List<Diagnosis.Definition> actions = service.checkDataTierRelatedIssues(
             indexMetadata,
             List.of(
                 // Shard is allowed on data tier, but disallowed because node is already hosting a copy of it.
@@ -1172,40 +1146,23 @@ public class ShardsAvailabilityHealthIndicatorServiceTests extends ESTestCase {
 
     private HealthIndicatorResult createExpectedResult(
         HealthStatus status,
-        String summary,
-        String helpURL,
+        String symptom,
         Map<String, Object> details,
         List<HealthIndicatorImpact> impacts,
-        List<UserAction> actions
+        List<Diagnosis> diagnosisList
     ) {
         return new HealthIndicatorResult(
             NAME,
-            DATA,
             status,
-            summary,
-            helpURL,
+            symptom,
             new SimpleHealthIndicatorDetails(addDefaults(details)),
             impacts,
-            actions
+            diagnosisList
         );
     }
 
-    private HealthIndicatorResult createExpectedTruncatedResult(
-        HealthStatus status,
-        String summary,
-        String helpUrl,
-        List<HealthIndicatorImpact> impacts
-    ) {
-        return new HealthIndicatorResult(
-            NAME,
-            DATA,
-            status,
-            summary,
-            helpUrl,
-            HealthIndicatorDetails.EMPTY,
-            impacts,
-            Collections.emptyList()
-        );
+    private HealthIndicatorResult createExpectedTruncatedResult(HealthStatus status, String symptom, List<HealthIndicatorImpact> impacts) {
+        return new HealthIndicatorResult(NAME, status, symptom, HealthIndicatorDetails.EMPTY, impacts, Collections.emptyList());
     }
 
     private static ClusterState createClusterStateWith(List<IndexRoutingTable> indexRoutes, List<NodeShutdown> nodeShutdowns) {
@@ -1269,11 +1226,11 @@ public class ShardsAvailabilityHealthIndicatorServiceTests extends ESTestCase {
                 )
         );
         Metadata.Builder metadataBuilder = Metadata.builder();
-        ImmutableOpenMap.Builder<String, IndexMetadata> indexMetadataMapBuilder = ImmutableOpenMap.builder();
+        Map<String, IndexMetadata> indexMetadataMap = new HashMap<>();
         for (IndexMetadata indexMetadata : indexMetadataList) {
-            indexMetadataMapBuilder.put(indexMetadata.getIndex().getName(), indexMetadata);
+            indexMetadataMap.put(indexMetadata.getIndex().getName(), indexMetadata);
         }
-        metadataBuilder.indices(indexMetadataMapBuilder.build());
+        metadataBuilder.indices(indexMetadataMap);
         metadataBuilder.putCustom(NodesShutdownMetadata.TYPE, nodesShutdownMetadata);
 
         DiscoveryNodes.Builder discoveryNodesBuilder = DiscoveryNodes.builder();
@@ -1338,9 +1295,9 @@ public class ShardsAvailabilityHealthIndicatorServiceTests extends ESTestCase {
             shardId,
             primary,
             getSource(primary, allocation.state),
-            allocation.unassignedInfo == null ? new UnassignedInfo(UnassignedInfo.Reason.INDEX_CREATED, null) : allocation.unassignedInfo
+            new UnassignedInfo(UnassignedInfo.Reason.INDEX_CREATED, null)
         );
-        if (allocation.state == UNAVAILABLE || allocation.state == INITIALIZING) {
+        if (allocation.state == INITIALIZING) {
             return routing;
         }
         routing = routing.initialize(allocation.nodeId, null, 0);
@@ -1348,22 +1305,24 @@ public class ShardsAvailabilityHealthIndicatorServiceTests extends ESTestCase {
         if (allocation.state == AVAILABLE) {
             return routing;
         }
-        routing = routing.moveToUnassigned(
-            new UnassignedInfo(
-                UnassignedInfo.Reason.NODE_RESTARTING,
-                null,
-                null,
-                -1,
-                allocation.unassignedTimeNanos != null ? allocation.unassignedTimeNanos : 0,
-                0,
-                false,
-                UnassignedInfo.AllocationStatus.DELAYED_ALLOCATION,
-                Set.of(),
-                allocation.nodeId
-            )
-        );
+        if (allocation.state == UNAVAILABLE) {
+            return routing.moveToUnassigned(Optional.ofNullable(allocation.unassignedInfo).orElse(randomFrom(nodeLeft(), decidersNo())));
+        }
         if (allocation.state == RESTARTING) {
-            return routing;
+            return routing.moveToUnassigned(
+                new UnassignedInfo(
+                    UnassignedInfo.Reason.NODE_RESTARTING,
+                    null,
+                    null,
+                    -1,
+                    allocation.unassignedTimeNanos != null ? allocation.unassignedTimeNanos : 0,
+                    0,
+                    false,
+                    UnassignedInfo.AllocationStatus.DELAYED_ALLOCATION,
+                    Set.of(),
+                    allocation.nodeId
+                )
+            );
         }
 
         throw new AssertionError("Unexpected state [" + allocation.state + "]");
@@ -1417,6 +1376,21 @@ public class ShardsAvailabilityHealthIndicatorServiceTests extends ESTestCase {
             0,
             false,
             UnassignedInfo.AllocationStatus.NO_VALID_SHARD_COPY,
+            Collections.emptySet(),
+            null
+        );
+    }
+
+    private static UnassignedInfo nodeLeft() {
+        return new UnassignedInfo(
+            UnassignedInfo.Reason.NODE_LEFT,
+            null,
+            null,
+            0,
+            0,
+            0,
+            false,
+            UnassignedInfo.AllocationStatus.NO_ATTEMPT,
             Collections.emptySet(),
             null
         );
